fix input box jump on focus

--- a/src/components/Autosuggest/Autosuggest.scss
+++ b/src/components/Autosuggest/Autosuggest.scss
@@ -69,6 +69,7 @@
         max-height: 215px;
         overflow: auto;
         border-top: 1px solid var(--border-color-light);
+        margin-top: -1px;
     }
 
     &__loaderContainer {
